--- a/Makefile.tino
+++ b/Makefile.tino
@@ -22,6 +22,9 @@
 # Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
 #
 # $Log$
+# Revision 1.2  2008-11-02 00:13:56  tino
+# First version
+#
 # Revision 1.1  2008-07-01 18:55:08  tino
 # save
 #
@@ -42,7 +45,7 @@ ADD_LDFLAGS=
    TINOCOPY=
 #    TINOINC=tino_common.h
 #    TINOLIB=tino/lib.h
-#INSTALLPATH=/usr/local
+ INSTALLPATH=/usr/local
 # DBG_CFLAGS=
 #DBG_LDFLAGS=
 # DBG_LDLIBS=-lefence
