--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,6 +2,9 @@ Execute a command or pipe only for a given duration.
 # $Header$
 #
 # $Log$
+# Revision 1.3  2010-10-20 23:12:30  tino
+# fork problem returns 210, child exec fail returns 127 (like bash)
+#
 # Revision 1.2  2008-11-02 00:13:56  tino
 # First version
 #
@@ -21,7 +24,7 @@ timeout [-v] [-signal[@seconds]...] seconds [-|program [args...]]
 
 <LI> If -v is doubled, the current timeout is shown.
 
-<LI> Returns the exit status of the program, 210 on error.
+<LI> Returns the exit status of the program, 127 if child exec fails, 210 on error from timeout (like usage).
 
 <LI> If execution takes longer than the given number of seconds,
 timeout terminates the program and returns 255.
